engine: Remove Number constructors
Since Numbers are immutable, there is no reason to unbox, autobox
or force construction of new objects of those types - their value can,
instead, be used directly.

This patch fixes multiple FindBugs inspections around this issue.

Change-Id: I334513e25abee1f9bfd71c575767c54cc96bc87c
Signed-off-by: Allon Mureinik <amureini@redhat.com>